--- a/Prevu.Synoptics.V6120_Novatex/Pages/P880.xaml
+++ b/Prevu.Synoptics.V6120_Novatex/Pages/P880.xaml
@@ -132,7 +132,7 @@
         <Labels:Pipe Width="179" StatusComponent="895-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Air" Canvas.Left="516" Canvas.Top="377" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="408" StatusComponent="880-01-ES2" RenderTransformOrigin="0.5,0.5" Canvas.Left="374" Canvas.Top="810" HorizontalAlignment="Left" VerticalAlignment="Center" PipeHeight="Medium"/>
         <Labels:Pipe Width="165" StatusComponent="880-01-ES3" RenderTransformOrigin="0.5,0.5" Color="Air" Canvas.Left="510" Canvas.Top="716" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="160" StatusComponent="890-01-EC1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="868" Canvas.Top="489" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="160" StatusComponent="890-01-EC1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="868" Canvas.Top="477" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -154,16 +154,16 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="132" StatusComponent="880-01-ES2" RenderTransformOrigin="0.5,0.5" Canvas.Left="773" Canvas.Top="207" PipeHeight="Medium" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="52" RenderTransformOrigin="0.5,0.5" StatusComponent="898-01-MA1" PipeHeight="Medium" Canvas.Left="1046" Canvas.Top="605" HorizontalAlignment="Left" VerticalAlignment="Center" >
+        <Labels:Pipe Width="52" RenderTransformOrigin="0.5,0.5" StatusComponent="898-01-MA1" PipeHeight="Medium" Canvas.Left="1046" Canvas.Top="593" HorizontalAlignment="Center" VerticalAlignment="Top" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="156" RenderTransformOrigin="0.5,0.5" StatusComponent="908-01-MA1" Color="Air" Canvas.Left="897" Canvas.Top="729" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="195" RenderTransformOrigin="0.5,0.5" StatusComponent="908-01-MA1" PipeHeight="Medium" Canvas.Left="1079" Canvas.Top="727" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:Pipe Width="44" RenderTransformOrigin="0.5,0.5" StatusComponent="906-01-MA1" PipeHeight="Medium" Canvas.Left="1050" Canvas.Top="683" HorizontalAlignment="Left" VerticalAlignment="Center" >
+        <Labels:Pipe Width="156" RenderTransformOrigin="0.5,0.5" StatusComponent="908-01-MA1" Color="Air" Canvas.Left="897" Canvas.Top="717" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="186" RenderTransformOrigin="0.5,0.5" StatusComponent="908-01-MA1" PipeHeight="Medium" Canvas.Left="1081" Canvas.Top="715" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:Pipe Width="44" RenderTransformOrigin="0.5,0.5" StatusComponent="906-01-MA1" PipeHeight="Medium" Canvas.Left="1050" Canvas.Top="671" HorizontalAlignment="Center" VerticalAlignment="Top" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -179,18 +179,18 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="30" StatusComponent="890-01-EC1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="739" Canvas.Top="527" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="92" RenderTransformOrigin="0.5,0.5" StatusComponent="908-01-MA1" PipeHeight="Medium" Canvas.Left="1182" Canvas.Top="761" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:Pipe Width="40" RenderTransformOrigin="0.5,0.5" StatusComponent="908-01-MA1" PipeHeight="Medium" Canvas.Left="1167" Canvas.Top="745" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="143" RenderTransformOrigin="0.5,0.5" StatusComponent="908-01-MA1" PipeHeight="Medium" Canvas.Left="1182" Canvas.Top="778" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:Pipe Width="68" RenderTransformOrigin="0.5,0.5" StatusComponent="908-01-MA1" PipeHeight="Medium" Canvas.Left="1153" Canvas.Top="749" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="49" RenderTransformOrigin="0.5,0.5" StatusComponent="908-01-MA1" PipeHeight="Medium" Canvas.Left="1305" Canvas.Top="761" VisibilityComponent="908-32-CV1" VisibilitySignal="LS1" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:Pipe Width="49" RenderTransformOrigin="0.5,0.5" StatusComponent="908-01-MA1" PipeHeight="Medium" Canvas.Left="1356" Canvas.Top="778" VisibilityComponent="908-32-CV1" VisibilitySignal="LS1" HorizontalAlignment="Center" VerticalAlignment="Top" />
         <Labels:Pipe Width="129" StatusComponent="890-01-EC1" RenderTransformOrigin="0.5,0.5" Color="Air" Canvas.Left="787" Canvas.Top="527" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="172" RenderTransformOrigin="0.5,0.5" StatusComponent="908-01-MA1" PipeHeight="Medium" Canvas.Left="1269" Canvas.Top="629" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:Pipe Width="108" StatusComponent="908-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1218" Canvas.Top="678" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="172" RenderTransformOrigin="0.5,0.5" StatusComponent="908-01-MA1" PipeHeight="Medium" Canvas.Left="1258" Canvas.Top="629" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:Pipe Width="96" StatusComponent="908-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1214" Canvas.Top="672" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -198,7 +198,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="83" RenderTransformOrigin="0.5,0.5" StatusComponent="920-01-EC1" PipeHeight="Medium" Canvas.Left="1191" Canvas.Top="458" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:Pipe Width="118" StatusComponent="920-01-EC1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1135" Canvas.Top="512" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="104" StatusComponent="920-01-EC1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1142" Canvas.Top="505" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -210,15 +210,15 @@
         <Rectangle Height="67" Stroke="Black" Width="2" Canvas.Left="494" Canvas.Top="671" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Rectangle Height="2" Stroke="Black" Width="48" Canvas.Left="517" Canvas.Top="670" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Rectangle Height="2" Stroke="Black" Width="48" Canvas.Left="868" Canvas.Top="472" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Rectangle Height="27" Stroke="Black" Width="2" Canvas.Left="986" Canvas.Top="698" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Rectangle Height="36" Stroke="Black" Width="2" RenderTransformOrigin="0.5,0.5" Canvas.Left="1352" Canvas.Top="748" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Rectangle Height="27" Stroke="Black" Width="2" Canvas.Left="986" Canvas.Top="686" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Rectangle Height="36" Stroke="Black" Width="2" RenderTransformOrigin="0.5,0.5" Canvas.Left="1403" Canvas.Top="765" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Rectangle Height="2" Stroke="Black" Width="15" Canvas.Left="481" Canvas.Top="670" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Ellipse Height="16" Stroke="#FFBDBDBD" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}" Canvas.Left="371" Canvas.Top="322" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Ellipse Height="16" Stroke="#FFBDBDBD" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}" Canvas.Left="336" Canvas.Top="662" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Ellipse Height="16" Stroke="#FFBDBDBD" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}" Canvas.Left="468" Canvas.Top="663" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Ellipse Height="16" Stroke="#FFBDBDBD" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}" Canvas.Left="504" Canvas.Top="663" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Ellipse Height="16" Stroke="#FFBDBDBD" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}" Canvas.Left="906" Canvas.Top="465" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Ellipse Height="16" Stroke="#FFBDBDBD" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}" Canvas.Left="979" Canvas.Top="724" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Ellipse Height="16" Stroke="#FFBDBDBD" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}" Canvas.Left="979" Canvas.Top="712" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:VRC_WaterCollectingTank Height="30" Width="24" Canvas.Left="367" Canvas.Top="215" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_FKS_FlakesSorter_DoubleCH Canvas.Left="300" Canvas.Top="394" Height="234" Width="258" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_DV_Diverter Canvas.Left="219" Canvas.Top="70" Height="60" HorizontalAlignment="Left" VerticalAlignment="Center"/>
@@ -235,12 +235,12 @@
                 </TransformGroup>
             </Machines:V01_FKS_FlakesSorter_SingleCH.RenderTransform>
         </Machines:V01_FKS_FlakesSorter_SingleCH>
-        <Machines:SCW_ScrewConveyor_straight Height="18" Width="267" Canvas.Left="938" Canvas.Top="569" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:V01_ScarpaTrasporto Canvas.Left="1035" Canvas.Top="693" Height="50" Width="84" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:V01_VS_Airlock Canvas.Left="1043" Canvas.Top="614" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="857" Canvas.Top="706" Height="50" Width="50" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:CV_Valve Height="50" Width="50" RenderTransformOrigin="0.5,0.5" Canvas.Left="1266" Canvas.Top="741" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <TextBlock TextWrapping="Wrap" TextAlignment="Right" FontSize="16" d:Foreground="White" Text="{lex:Loc Sampling}" Canvas.Left="1298" Canvas.Top="722" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:SCW_ScrewConveyor_straight Height="18" Width="267" Canvas.Left="938" Canvas.Top="557" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_ScarpaTrasporto Canvas.Left="1035" Canvas.Top="681" Height="50" Width="84" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_VS_Airlock Canvas.Left="1043" Canvas.Top="602" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="857" Canvas.Top="694" Height="50" Width="50" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:CV_Valve Height="50" Width="50" RenderTransformOrigin="0.5,0.5" Canvas.Left="1317" Canvas.Top="758" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <TextBlock TextWrapping="Wrap" TextAlignment="Right" FontSize="16" d:Foreground="White" Text="{lex:Loc Sampling}" Canvas.Left="1421" Canvas.Top="770" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DetailsLabel ComponentName="880-HOPPER" DetailsPageName="D880" HideComponentName="True" Canvas.Left="415" Canvas.Top="416" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DetailsLabel ComponentName="890-HOPPER" DetailsPageName="D890" HideComponentName="True" Canvas.Left="990" Canvas.Top="224" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="880-48-LEV" Canvas.Left="450" Canvas.Top="416" HorizontalAlignment="Left" VerticalAlignment="Center"/>
@@ -260,16 +260,16 @@
         <Labels:DeviceLabel ComponentName="895-41-LS1" Canvas.Left="808" Canvas.Top="448" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="890-01-EC1" Canvas.Left="1004" Canvas.Top="322" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="890-41-LEV" Canvas.Left="892" Canvas.Top="224" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="898-01-MA1" Canvas.Left="1027" Canvas.Top="510" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:DeviceLabel ComponentName="908-01-MA1" Canvas.Left="837" Canvas.Top="650" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:DeviceLabel ComponentName="906-01-MA1" Canvas.Left="1109" Canvas.Top="620" HorizontalAlignment="Center" VerticalAlignment="Top" />
-        <Labels:DeviceLabel ComponentName="908-43-PT1" Canvas.Left="942" Canvas.Top="650" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="908-32-CV1" Canvas.Left="1247" Canvas.Top="789" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:DeviceLabel ComponentName="898-01-MA1" Canvas.Left="1027" Canvas.Top="498" HorizontalAlignment="Center" VerticalAlignment="Top" />
+        <Labels:DeviceLabel ComponentName="908-01-MA1" Canvas.Left="837" Canvas.Top="638" HorizontalAlignment="Center" VerticalAlignment="Top" />
+        <Labels:DeviceLabel ComponentName="906-01-MA1" Canvas.Left="1109" Canvas.Top="608" HorizontalAlignment="Center" VerticalAlignment="Top" />
+        <Labels:DeviceLabel ComponentName="908-43-PT1" Canvas.Left="942" Canvas.Top="638" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="908-32-CV1" Canvas.Left="1297" Canvas.Top="710" HorizontalAlignment="Left" VerticalAlignment="Top" />
         <Labels:JumpLabel JumpFromLabel="879-31-CV1" JumpToLabel="878-01-MA1" Canvas.Left="51" Canvas.Top="46" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:JumpLabel JumpFromLabel="879-31-CV1" JumpToLabel="910-01-EC1" Canvas.Left="417" Canvas.Top="47" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:JumpLabel JumpFromLabel="886-01-MA1" JumpToLabel="917-01-MA1" Canvas.Left="834" Canvas.Top="110" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:JumpLabel JumpFromLabel="898-01-MA1" JumpToLabel="920-01-EC1" Canvas.Left="1246" Canvas.Top="428" HorizontalAlignment="Left" VerticalAlignment="Center" Direction="Left" />
-        <Labels:JumpLabel JumpFromLabel="908-01-MA1" JumpToLabel="948-31-CV1" Canvas.Left="1421" Canvas.Top="599" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:JumpLabel JumpFromLabel="908-01-MA1" JumpToLabel="948-31-CV1" Canvas.Left="1421" Canvas.Top="599" HorizontalAlignment="Center" VerticalAlignment="Top" />
         <Labels:JumpLabel JumpFromLabel="880-01-ES3" JumpToLabel="893-01-MA1" Canvas.Left="653" Canvas.Top="684" HorizontalAlignment="Left" VerticalAlignment="Top" />
     </Canvas>
 </UserControl>
