--- a/Prevu.Synoptics.V6120_Novatex/Details/D190.xaml
+++ b/Prevu.Synoptics.V6120_Novatex/Details/D190.xaml
@@ -37,5 +37,6 @@
         <Rectangle Height="6" Stroke="Black" Width="30" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="275" Canvas.Top="225" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="190-01-MA1" Canvas.Left="33" Canvas.Top="154" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="191-01-EC1" Canvas.Left="185" Canvas.Top="20" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="190-01-YA1" Canvas.Left="150" Canvas.Top="154" HorizontalAlignment="Center" VerticalAlignment="Center"/>
     </Canvas>
 </UserControl>
