--- a/Prevu.Synoptics.V3923_Evanses/Pages/P940.xaml
+++ b/Prevu.Synoptics.V3923_Evanses/Pages/P940.xaml
@@ -10,7 +10,7 @@
              x:Class="Prevu.Synoptics.P940" mc:Ignorable="d" 
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas>
-        <Labels:Pipe Width="123" RenderTransformOrigin="0.5,0.5" StatusComponent="950-01-ECS3" Canvas.Left="948" Canvas.Top="509" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:Pipe Width="123" RenderTransformOrigin="0.5,0.5" StatusComponent="950-01-EC1" Canvas.Left="948" Canvas.Top="509" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:Pipe Width="379" RenderTransformOrigin="0.5,0.5" StatusComponent="957-01-MA1" Color="ByProduct" Canvas.Left="1121" Canvas.Top="738" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="56" RenderTransformOrigin="0.5,0.5" StatusComponent="957-01-MA1" Canvas.Left="1019" Canvas.Top="738" Color="Air" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:Pipe Width="46" RenderTransformOrigin="0.5,0.5" StatusComponent="955-01-MA1" Canvas.Left="1069" Canvas.Top="695" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top" >
@@ -20,22 +20,22 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="187" RenderTransformOrigin="0.5,0.5" StatusComponent="950-01-ECS3" Canvas.Left="907" Canvas.Top="587" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:Pipe Width="58" StatusComponent="950-01-ECS3" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1063" Canvas.Top="614" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="187" RenderTransformOrigin="0.5,0.5" StatusComponent="950-01-EC1" Canvas.Left="907" Canvas.Top="587" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:Pipe Width="58" StatusComponent="950-01-EC1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1063" Canvas.Top="614" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="126" StatusComponent="950-01-ECS3" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1006" Canvas.Top="448" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="126" StatusComponent="950-01-EC1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1006" Canvas.Top="448" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="85" RenderTransformOrigin="0.5,0.5" StatusComponent="950-01-ECS3" Color="ByProduct" Canvas.Left="1067" Canvas.Top="387" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="85" RenderTransformOrigin="0.5,0.5" StatusComponent="950-01-EC1" Color="ByProduct" Canvas.Left="1067" Canvas.Top="387" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Color="ByProduct" Width="66" RenderTransformOrigin="0.5,0.5" StatusComponent="950-01-ECS3" Canvas.Left="1117" Canvas.Top="418" HorizontalAlignment="Left" VerticalAlignment="Center" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -158,14 +158,14 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="200" StatusComponent="950-01-ECS3" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="809" Canvas.Top="489" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="200" StatusComponent="950-01-EC1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="809" Canvas.Top="489" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="106" StatusComponent="950-01-ECS3" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="897" Canvas.Top="458" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="106" StatusComponent="950-01-EC1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="897" Canvas.Top="458" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -229,7 +229,6 @@
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="950-61-LEV" Canvas.Left="746" Canvas.Top="207"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="950-01-EC1" Canvas.Left="808" Canvas.Top="369"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="950-01-ECS2" Canvas.Left="670" Canvas.Top="315"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="950-01-ECS3" Canvas.Left="956" Canvas.Top="316"/>
         <Labels:DeviceLabel ComponentName="939-21-CV1" Canvas.Left="211" Canvas.Top="36" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:DeviceLabel ComponentName="947-01-MA1" Canvas.Left="801" Canvas.Top="675" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:DeviceLabel ComponentName="945-01-MA1" Canvas.Left="631" Canvas.Top="649" HorizontalAlignment="Left" VerticalAlignment="Center" />
