--- a/Prevu.Synoptics.V3923_Evanses/Pages/P940.xaml
+++ b/Prevu.Synoptics.V3923_Evanses/Pages/P940.xaml
@@ -50,7 +50,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="158" StatusComponent="940-01-ECS2" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="673" Canvas.Top="579" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="158" StatusComponent="940-01-EC1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="673" Canvas.Top="579" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -88,21 +88,21 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="262" StatusComponent="940-01-ECS2" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="182" Canvas.Top="547">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="262" StatusComponent="940-01-EC1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="182" Canvas.Top="547">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="42" StatusComponent="940-01-ECS2" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="332" Canvas.Top="452">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="42" StatusComponent="940-01-EC1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="332" Canvas.Top="452">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="403" StatusComponent="940-01-ECS2" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="351" Canvas.Top="471"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="403" StatusComponent="940-01-EC1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="351" Canvas.Top="471"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="110" StatusComponent="898-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="710" Canvas.Top="152" VisibilityComponent="939-21-CV1" VisibilitySignal="LS2">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -173,7 +173,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="709" RenderTransformOrigin="0.5,0.5" StatusComponent="957-01-MA1" Color="ByProduct" Canvas.Left="791" Canvas.Top="110" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="12" StatusComponent="940-01-ECS2" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="746" Canvas.Top="475" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="12" StatusComponent="940-01-EC1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="746" Canvas.Top="475" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -232,8 +232,7 @@
         <Labels:DeviceLabel ComponentName="939-21-CV1" Canvas.Left="211" Canvas.Top="36" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:DeviceLabel ComponentName="947-01-MA1" Canvas.Left="801" Canvas.Top="675" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:DeviceLabel ComponentName="945-01-MA1" Canvas.Left="631" Canvas.Top="649" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:DeviceLabel ComponentName="940-01-EC1" Canvas.Left="365" Canvas.Top="322" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="940-01-ECS2" Canvas.Left="364" Canvas.Top="387" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="940-01-EC1" Canvas.Left="366" Canvas.Top="370" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="940-61-LEV" Canvas.Left="267" Canvas.Top="217" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="964-71-ECS2" Canvas.Left="415" Canvas.Top="766" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:DeviceLabel ComponentName="950-61-LS4" Canvas.Left="706" Canvas.Top="30" HorizontalAlignment="Left" VerticalAlignment="Center"/>
